fix: fixes on links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
         <p>
             <small>
                 Copyright Muriki Game Studios ©2022 - <script>document.write((new Date(Date.now())).getFullYear())</script>.
-                Read our <a class="link-light" href="/privacy-policy">Privacy Policy</a>.
+                Read our <a class="link-light" href="{{ site.baseurl }}/privacy-policy">Privacy Policy</a>.
             </small>
         </p>
     </div>
