--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,4 +1,4 @@
 <div class="w-100 d-flex flex-column align-items-center justify-content-center user-select-none">
-    <img class="p-4 logo" src="/assets/img/logo.png" alt="Logo">
-    <img class=" px-4 logo-text" src="/assets/img/logo-text.png" alt="Logo Text">
+    <img class="p-4 logo" src="{{ site.baseurl }}/assets/img/logo.png" alt="Logo">
+    <img class=" px-4 logo-text" src="{{ site.baseurl }}/assets/img/logo-text.png" alt="Logo Text">
 </div>
