--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,7 +9,7 @@
             <ul class="navbar-nav align-items-center">
                 {% for section in site.data.toc %}
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="{{ section.url }}">{{ section.title }}</a>
+                    <a class="nav-link text-white" href="{{ site.baseurl }}/{{ section.url }}">{{ section.title }}</a>
                 </li>
                 {% endfor %}
             </ul>
