--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-secondary" style="position: sticky; top: 0">
     <div class="container-fluid">
-        <a class="navbar-brand text-white" href="#">{{ site.title }}</a>
+        <a class="navbar-brand text-white" href="{{ site.baseurl }}">{{ site.title }}</a>
         <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
