--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Metadata -->
+    <title>Muriki Game Studios | {{ page.title | default: site.title }}</title>
+    <meta property="og:title" content="Muriki Game Studios | {{ page.title | default: site.title }}" />
+    <meta property="og:description" content="{{ page.description | default: site.description }}" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="{{ site.url }}" />
+    <meta property="og:site_name" content="{{ site.url }}" />
+    <meta property="og:image" content="{{ site.url | append: site.baseurl }}/assets/img/logo-share.png" />
+    <meta itemprop="name" content="{{ page.title | default: site.title }}">
+    <meta itemprop="description" content="{{ page.description | default: site.description | strip_html | strip_newlines | truncate: 160 }}">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Muriki Game Studios | {{ page.title | default: site.title }}" />
+    <meta name="twitter:description" content="{{ page.description | default: site.description | strip_html | strip_newlines | truncate: 160 }}" />
+    <meta property="twitter:image" content="{{ site.url | append: site.baseurl }}/assets/img/logo-share.png" />
+
     <!-- Favicons -->
     <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/assets/favicons/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/assets/favicons/apple-icon-57x57.png">
@@ -30,5 +45,4 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
-    <title>{{ site.title }}</title>
 </head>
