fix: logo responsiveness

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,12 @@ html, body {
 }
 
 @media only screen and (max-width: 768px) {
+
+    .logo {
+        height: initial;
+        width: 90%;
+    }
+
     .logo-text {
         width: 100%;
     }
