--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
     <div class="w-100 d-inline-flex align-items-center justify-content-around">
         <p>
             <small>
-                Copyright {{ site.title }} ©2022 - <span id="currentYear">2022</span>.
-                Read our <a class="link-light" href="{{ site.baseurl }}/privacy-policy">Privacy Policy</a>.
+                Copyright {{ site.title }} ©2022 - <span id="currentYear">2022</span>.<br>
+                Read this website's <a class="link-light" href="{{ site.baseurl }}/privacy-policy">Privacy Policy</a>.
             </small>
         </p>
         <script>
