feat: add z-index to navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-secondary" style="position: sticky; top: 0">
+<nav class="navbar navbar-expand-lg bg-secondary" style="position: sticky; top: 0; z-index: 99;">
     <div class="container-fluid">
         <a class="navbar-brand text-white" href="{{ site.url }}">{{ site.title }}</a>
         <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
