--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,4 +1,12 @@
 <div class="banner w-100 py-5 d-flex flex-column align-items-center justify-content-center user-select-none">
-    <img class="px-4 logo" src="{{ site.baseurl }}/assets/img/logo.png" alt="Logo">
-    <img class=" px-4 logo-text" src="{{ site.baseurl }}/assets/img/logo-text.png" alt="Logo Text">
+    <img class="banner-logo px-4 logo" src="{{ site.baseurl }}/assets/img/logo.png" alt="Logo">
+    <img class="banner-text px-4 logo-text" src="{{ site.baseurl }}/assets/img/logo-text.png" alt="Logo Text">
 </div>
+<script>
+    $(document).ready(function() {
+        $('.banner-logo').hide();
+        $('.banner-text').hide();
+        $('.banner-logo').fadeIn(600);
+        $('.banner-text').fadeIn(900);
+    });
+</script>
