--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,6 +33,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/assets/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="{{ site.baseurl }}/assets/favicons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/assets/favicons/favicon-16x16.png">
+    <link rel="shortcut icon" href="{{ site.baseurl }}/assets/img/mole-maniacs-icon.png">
     <link rel="manifest" href="{{ site.baseurl }}/assets/favicons/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="{{ site.baseurl }}/assets/favicons/ms-icon-144x144.png">
