feat: set responsive page content margin

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     {% include navbar.html %}
     {% include banner.html %}
 
-    <div class="p-4 text-white">
+    <div class="page-content text-white">
         {{ content }}
     </div>
 
