--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,16 @@ html, body {
     height: 100%;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+footer {
+    margin-top: auto;
+}
+
 .logo {
     height: 400px;
 }
@@ -20,6 +30,7 @@ html, body {
 .banner {
     background-attachment: fixed;
     background-size: contain;
+    height: 100%;
     background-image: url({{ site.url }}/assets/img/background.webp);
 }
 
