feat: visual updates - change hyperlink colors and underline - minor changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
         <p>
             <small>
                 Copyright {{ site.title }} ©2022 - <span id="currentYear">2022</span>.
-                Read this website's <a class="link-light" href="{{ site.baseurl }}/privacy-policy">Privacy Policy</a>.
+                Read this website's <a href="{{ site.baseurl }}/privacy-policy">Privacy Policy</a>.
             </small>
         </p>
         <script>
