feat: do not show banner by default

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
 <body class="bg-dark h-100 w-100">
     {% include navbar.html %}
-    {% include banner.html show_logo=page.show_banner_logo %}
+    {% include banner.html show=page.show_banner %}
 
     {% unless page.hide_content %}
     <div class="page-content text-white">
