--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,19 +4,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Metadata -->
-    <title>{{ site.title }} | {{ page.title | default: site.title }}</title>
-    <meta property="og:title" content="{{ site.title }} | {{ page.title | default: site.title }}" />
+    <title>{{ page.title | default: site.title }} | {{ site.title }}</title>
+    <meta property="og:title" content="{{ page.title | default: site.title }} | {{ site.title }}" />
     <meta property="og:description" content="{{ page.description | default: site.description }}" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="{{ site.url }}" />
     <meta property="og:site_name" content="{{ site.url }}" />
-    <meta property="og:image" content="{{ site.url | append: site.baseurl }}/assets/img/logo-share.png" />
+    <meta property="og:image" content="{{ site.url | append: site.baseurl }}/assets/img/{{ page.logo_share | default: 'logo-share.png' }}" />
     <meta itemprop="name" content="{{ page.title | default: site.title }}">
     <meta itemprop="description" content="{{ page.description | default: site.description | strip_html | strip_newlines | truncate: 160 }}">
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="{{ site.title }} | {{ page.title | default: site.title }}" />
+    <meta name="twitter:title" content="{{ page.title | default: site.title }} | {{ site.title }}" />
     <meta name="twitter:description" content="{{ page.description | default: site.description | strip_html | strip_newlines | truncate: 160 }}" />
-    <meta property="twitter:image" content="{{ site.url | append: site.baseurl }}/assets/img/logo-share.png" />
+    <meta property="twitter:image" content="{{ site.url | append: site.baseurl }}/assets/img/{{ page.logo_share | default: 'logo-share.png' }}" />
 
     <!-- Favicons -->
     <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/assets/favicons/favicon.ico">
