--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,15 @@
-<footer class="footer w-100 p-4 bg-secondary text-white text-center">
+<footer class="footer w-100 px-2 py-3 bg-secondary text-white text-center">
+    <div class="d-flex flex-row">
+        {% for contact in site.data.contact %}
+            {% if contact.show_on_footer %}
+                <a class="social-icon" href="{{ contact.url }}" alt="{{ contact.name }}" target="_blank">
+                    <img class="w-100 h-100" src="/assets/img/icons/{{ contact.icon }}.svg" alt="{{ contact.name }}">
+                </a>
+            {% endif %}
+        {% endfor %}
+    </div>
     <div class="w-100 d-inline-flex align-items-center justify-content-around">
-        <p>
+        <p class="mb-0 mt-2">
             <small>
                 Copyright {{ site.title }} ©2022 - <span id="currentYear">{{ 'now' | date: "%Y" }}</span>.
                 Read this website's <a href="{{ site.baseurl }}/privacy-policy">Privacy Policy</a>.
