--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,43 @@ a {
 
 footer {
     margin-top: auto;
+    position: relative;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.social-icon:hover {
+    color: white;
+    opacity: 0.9;
+    padding: 2px;
+}
+
+.social-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    width: 34px;
+    height: 28px;
+    padding: 4px;
+    border-style: solid;
+    border-width: 1px;
+    border-right-style: none;
+    transition: 0.1s padding;
+}
+
+.social-icon:first-child {
+    border-top-left-radius: 25%;
+    border-bottom-left-radius: 25%;
+}
+
+.social-icon:last-child {
+    border-top-right-radius: 25%;
+    border-bottom-right-radius: 25%;
+    border-right-style: solid;
 }
 
 .logo {
@@ -26,11 +63,6 @@ footer {
 
 .logo-text {
     width: 80vh;
-}
-
-.footer {
-    position: relative;
-    bottom: 0;
 }
 
 .banner {
