--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,10 +9,10 @@
         {% endfor %}
     </div>
     <div class="w-100 d-inline-flex align-items-center justify-content-around">
-        <p class="mb-0 mt-2">
+        <p class="mb-0 mt-2" style="font-size: 0.8rem; color: #c9c9ca; line-height: 1rem;">
             <small>
                 Copyright {{ site.title }} ©2022 - <span id="currentYear">{{ 'now' | date: "%Y" }}</span>.
-                Read this website's <a href="{{ site.baseurl }}/privacy-policy">Privacy Policy</a>.
+                Read this website's <a href="{{ site.baseurl }}/privacy-policy" class="text-white">Privacy Policy</a>.
             </small>
         </p>
         <script>
