--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    user-select: none;
 }
 
 a {
@@ -74,6 +75,7 @@ footer {
 
 .page-content {
     padding: 3rem !important;
+    user-select: text;
 }
 
 @media only screen and (max-width: 768px) {
