refactor: renomear banner-background

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,7 +69,7 @@ footer {
     background-attachment: fixed;
     background-size: contain;
     height: 100%;
-    background-image: url({{ site.url }}/assets/img/background.webp);
+    background-image: url(/assets/img/banner-background.webp);
 }
 
 .page-content {
