feat: adicionar plano de fundo da página

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,9 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    background: url('/assets/img/page-background.jpg');
+    background-attachment: fixed;
+    background-blend-mode: luminosity;
 }
 
 a {
