--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,12 @@
                 </a>
             {% endif %}
         {% endfor %}
+        
+        <!-- Mastodon verification link -->
+        <div hidden="true">
+            <a rel="me" href="https://mastodon.social/@murikistudio">Mastodon</a>
+        </div>
+        
     </div>
     <div class="w-100 d-inline-flex align-items-center justify-content-around">
         <p class="mb-0 mt-2" style="font-size: 0.8rem; color: #c9c9ca; line-height: 1rem;">
