--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,6 +38,9 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="{{ site.baseurl }}/assets/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    
+    <!-- Other -->
+    <link rel="me" href="https://mastodon.social/@murikistudio">
 
     <!-- Libraries -->
     <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
