--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,7 @@
     <meta property="twitter:image" content="{{ site.url | append: site.baseurl }}/assets/img/{{ page.logo_share | default: 'logo-share.png' }}" />
 
     <!-- Favicons -->
+    <link rel="canonical" href="{{site.url}}{{ page.url }}" />
     <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/assets/favicons/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/assets/favicons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="{{ site.baseurl }}/assets/favicons/apple-icon-60x60.png">
@@ -38,7 +39,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="{{ site.baseurl }}/assets/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    
+
     <!-- Other -->
     <link rel="me" href="https://mastodon.social/@murikistudio">
 
