--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,15 +44,10 @@
     <link rel="me" href="https://mastodon.social/@murikistudio">
 
     <!-- Libraries -->
-    <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
-        integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
+    <link rel="stylesheet" href="/assets/libs/bootstrap/bootstrap.min.css">
+    <script defer src="/assets/libs/bootstrap/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/assets/libs/swiper/swiper-bundle.min.css" />
+    <script src="/assets/libs/swiper/swiper-bundle.min.js"></script>
+    <script src="/assets/libs/jquery/jquery.min.js"></script>
 </head>
