feat: changes in the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
         {% endfor %}
     </div>
     <div class="w-100 d-inline-flex align-items-center justify-content-around">
-        <p class="mb-0 mt-2" style="font-size: 0.8rem; color: #c9c9ca; line-height: 1rem;">
+        <p class="mb-0 mt-2" style="font-size: 0.9rem; line-height: 1rem;">
             <small>
                 Copyright {{ site.title }} ©2022 - <span id="currentYear">{{ 'now' | date: "%Y" }}</span>.
                 Read this website's <a href="{{ site.baseurl }}/privacy-policy">Privacy Policy</a>.
