feat: add swiper to pages only if needed - should specify the variable swiper in each page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -48,7 +48,9 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
     <link rel="stylesheet" href="/assets/libs/bootstrap/bootstrap.min.css">
     <script defer src="/assets/libs/bootstrap/bootstrap.bundle.min.js"></script>
+    {% if page.swiper %}
     <link rel="stylesheet" href="/assets/libs/swiper/swiper-bundle.min.css" />
     <script src="/assets/libs/swiper/swiper-bundle.min.js"></script>
+    {% endif %}
     <script src="/assets/libs/jquery/jquery.min.js"></script>
 </head>
