feat: convert all images to webp

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,6 +1,6 @@
 {% if include.show %}
 <div class="banner w-100 py-5 d-flex flex-column align-items-center justify-content-center user-select-none">
-    <img class="banner-logo px-5 pb-4 logo" src="{{ site.baseurl }}/assets/img/logo.png" alt="Logo">
-    <img class="banner-text px-5 logo-text" src="{{ site.baseurl }}/assets/img/logo-text.png" alt="Logo Text">
+    <img class="banner-logo px-5 pb-4 logo" src="{{ site.baseurl }}/assets/img/logo.webp" alt="Logo">
+    <img class="banner-text px-5 logo-text" src="{{ site.baseurl }}/assets/img/logo-text.webp" alt="Logo Text">
 </div>
 {% endif %}
