--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,14 +10,14 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="{{ site.url }}" />
     <meta property="og:site_name" content="{{ site.url }}" />
-    <meta property="og:image" content="{{ site.url | append: site.baseurl }}/assets/img/{{ page.logo_share | default: 'logo-share.png' }}" />
+    <meta property="og:image" content="{{ site.url | append: site.baseurl }}/assets/img/{{ page.logo_share | default: 'logo-share.webp' }}" />
     <meta itemprop="name" content="{{ page.title | default: site.title }}">
     <meta name="description" content="{{ page.description | default: site.description | strip_html | strip_newlines | truncate: 160 }}">
     <meta itemprop="description" content="{{ page.description | default: site.description | strip_html | strip_newlines | truncate: 160 }}">
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="{{ page.title | default: site.title }} | {{ site.title }}" />
     <meta name="twitter:description" content="{{ page.description | default: site.description | strip_html | strip_newlines | truncate: 160 }}" />
-    <meta property="twitter:image" content="{{ site.url | append: site.baseurl }}/assets/img/{{ page.logo_share | default: 'logo-share.png' }}" />
+    <meta property="twitter:image" content="{{ site.url | append: site.baseurl }}/assets/img/{{ page.logo_share | default: 'logo-share.webp' }}" />
 
     <!-- Favicons -->
     <link rel="canonical" href="{{site.url}}{{ page.url }}" />
