feat: changes on nav and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer w-100 px-2 py-3 bg-secondary text-white text-center">
+<footer class="footer w-100 px-2 py-3 bg-bars text-white text-center">
     <div class="d-flex flex-row">
         {% for contact in site.data.contact %}
             {% if contact.show_on_footer %}
