feat: add jquery to pages only if needed - should specify the variable jquery in each page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,5 +52,7 @@
     <link rel="stylesheet" href="/assets/libs/swiper/swiper-bundle.min.css" />
     <script src="/assets/libs/swiper/swiper-bundle.min.js"></script>
     {% endif %}
+    {% if page.jquery %}
     <script src="/assets/libs/jquery/jquery.min.js"></script>
+    {% endif %}
 </head>
