fix: disable swiper shadows

--- a/_includes/swiper.html
+++ b/_includes/swiper.html
@@ -10,7 +10,7 @@
         },
         effect: "cube",
         cubeEffect: {
-            shadow: true,
+            shadow: false,
             slideShadows: false,
             shadowOffset: 20,
             shadowScale: 0.95,
