--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-expand-lg bg-bars" style="position: sticky; top: 0; z-index: 99;">
     <div class="container-fluid">
-        <a class="navbar-brand text-white" href="{{ site.url }}">{{ site.title }}</a>
+        <a class="navbar-brand text-white" href="{{ site.url }}">
+            <img src="/assets/img/logo.webp" alt="Logo" style="width: 1.5rem">
+            <span class="px-2" style="vertical-align: middle">{{ site.title }}</span>
+        </a>
         <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
