--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-bars" style="position: sticky; top: 0; z-index: 99;">
     <div class="container-fluid">
-        <a class="navbar-brand text-white" href="{{ site.url }}">
+        <a class="navbar-brand text-white pt-0" href="{{ site.url }}">
             <img src="/assets/img/logo.webp" alt="Logo" style="width: 1.5rem">
             <span class="px-2" style="vertical-align: middle">{{ site.title }}</span>
         </a>
