update zombies and bullets page - remove unused assets - set body to bg-dark

--- a/_includes/swiper.html
+++ b/_includes/swiper.html
@@ -8,7 +8,7 @@
             el: '.swiper-pagination',
             type: 'bullets',
         },
-        effect: "cube",
+        effect: "slide",
         cubeEffect: {
             shadow: false,
             slideShadows: false,
@@ -21,6 +21,6 @@
             delay: 5000,
         },
         //{% endif %}
-        spaceBetween: 24,
+        spaceBetween: 0,
     });
 </script>
