--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
 {% include head.html %}
 
-<body class="w-100">
+<body class="w-100 bg-dark">
     {% include navbar.html %}
     {{ content }}
     {% include footer.html %}
