--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-bars w-100" data-aos="fade-down" style="position: fixed; top: 0; z-index: 99;">
     <div class="container-fluid">
         <a class="navbar-brand text-white" href="{{ site.url }}">
-            <img src="/assets/img/logo.webp" alt="Logo" style="width: 1.5rem">
+            <img src="/assets/img/logo.svg" alt="Logo" style="width: 1.5rem">
             <span class="px-2" style="vertical-align: middle">{{ site.title }}</span>
         </a>
     </div>
