--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,10 +16,6 @@ body {
     flex-direction: column;
     min-height: 100vh;
     user-select: none;
-    background: url('/assets/img/page-background.webp');
-    background-attachment: fixed;
-    background-blend-mode: luminosity;
-    animation: background-scroll 60s linear infinite;
 }
 
 hr {
@@ -80,20 +76,6 @@ footer {
     border-top-right-radius: 25%;
     border-bottom-right-radius: 25%;
     border-right-style: solid;
-}
-
-@keyframes background-scroll {
-    0% {
-        background-position: 0px 0px
-    }
-
-    50% {
-        background-position: -600px 0px
-    }
-
-    100% {
-        background-position: 0px 0px
-    }
 }
 
 .logo-home {
@@ -190,4 +172,14 @@ div .fixed-background {
     background-attachment: fixed !important;
     background-position: center !important;
     z-index: 0;
+}
+
+.screenshot-background {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-size: cover !important;
+    background-position: center !important;
+    filter: blur(8px);
+    z-index: -10;
 }
