--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,7 +89,15 @@ footer {
     padding: 1.5rem !important;
 }
 
+* {
+    scroll-margin-top: 54px;
+}
+
 @media only screen and (max-width: 768px) {
+    * {
+        scroll-margin-top: 110px;
+    }
+
     .logo-home {
         width: 85%;
     }
